# pod-scribe

./: .gitignore  LICENSE  README.md  config.example.yaml  pyproject.toml  requirements.txt  run.py
src/: downloader.py  rss_reader.py  transcriber.py
tests/: test_run.py
